k8s/apps/echo-prober-istio-v123/overlays/echo-v1-v2/vs-dr.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo
spec:
  hosts:
  - echo.echo.svc.cluster.local
  http:
  - match:
    - headers:
        x-version:
          exact: v3
    route:
    - destination:
        host: echo.echo-v3.svc.cluster.local
  - headers:
      request:
        set:
          name: zhopa
    match:
    - headers:
        x-version:
          exact: v2
    route:
    - destination:
        host: echo.echo.svc.cluster.local
        subset: version-v2
  - route:
    - destination:
        host: echo.echo.svc.cluster.local
        subset: version-v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: echo
spec:
  host: echo.echo.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
  - labels:
      version: v3
    name: version-v3
